--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.4.0",
     "emoji-mart": "^5.5.2",
     "emoji-toolkit": "^7.0.1",
+    "moment": "^2.29.4",
     "next": "13.4.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
