--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,9 +42,12 @@ services:
     restart: always
     ports:
       - '6379:6379'
+    volumes:
+      - redis:/data
     networks:
       - videoConferencing
 networks:
   videoConferencing:
 volumes:
   dbdata:
+  redis:
